UUID in other places
UUID has been fixed in most places
But need to refine the swagger docs
