# docs/swagger.json
@@ -192,6 +192,11 @@
         },
         "/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -245,6 +250,11 @@
         },
         "/user/trash": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves all users where deleted_at is not null",
                 "produces": [
                     "application/json"
@@ -268,6 +278,11 @@
         },
         "/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -294,6 +309,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "user"
                 ],
@@ -314,6 +334,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -354,6 +379,11 @@
         },
         "/user/{id}/prune": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Hard deletes a user record from the database. This action cannot be undone.",
                 "tags": [
                     "user"
@@ -392,6 +422,11 @@
         },
         "/user/{id}/restore": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Restore a user that has been soft deleted",
                 "produces": [
                     "application/json"
